--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.14.0",
     "firebase": "^3.3.0",
     "history": "^2.0.1",
     "re-base": "^2.1.0",
